fixed z-index of cursors

--- a/public/css/client.css
+++ b/public/css/client.css
@@ -109,7 +109,7 @@ body {
 
 .message{
 position:relative;
-z-index:1;
+z-index:2;
 }
 
 #messages .timestamp,
@@ -596,7 +596,7 @@ z-index:5;
 	width: 175px;
 	cursor:default;
 	background-color:#171717;
-    z-index: 2;
+    z-index: 3;
 	opacity: 0.5;
 }
 
